import { Image, Text, View } from "react-native";

export default function AppLogo({
    horizontal = false,
    size = 96,
    title = "Rota do Café",
    subtitle,
    titleClassName = "text-3xl",
    subtitleClassName = "text-sm",
    containerClassName = "",
}) {
    return (
...
