appId: ${APP_ID}
---
- launchApp:
    clearState: true

- tapOn: "Digite seu e-mail"
- eraseText
- inputText: "${TEST_EMAIL}"

- tapOn: "Digite sua senha"
- eraseText
- inputText: "${TEST_NEW_PASSWORD}"

- hideKeyboard

- tapOn: "Entrar"

- extendedWaitUntil:
    visible: "Rota do Café"
    timeout: 10000

- tapOn:
    id: "tab-perfil"

- assertVisible: "Perfil"

- tapOn: "Editar dados"

- assertVisible: "Salvar"
- assertVisible: "Cancelar"

- tapOn: "TesteMaestro"

- eraseText

- inputText: "Teste Maestro Editado"

- hideKeyboard

- tapOn: "Salvar"

- assertVisible: "Teste Maestro Editado"
